--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html, body {
 
 .japan {
     height: 100vh;
-    background-image: url("./assets/china.jpg");
+    background-image: url("./assets/boranbay-big.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 
